--- a/main.css
+++ b/main.css
@@ -1,10 +1,16 @@
 html,
 body {
+    background-image: url("https://wallpapertag.com/wallpaper/full/9/f/6/705304-top-pictures-of-black-backgrounds-1920x1200.jpg");
+
+    background-size: cover;
+
     width: 100%;
     height: 100%;
     margin: 0;
+
 }
 
+/* navigation section */
 .nav {
     background-color: black;
     border-bottom: 1px solid red;
@@ -24,6 +30,7 @@ body {
 }
 
 .menu a {
+    font-size: 14px;
     display: block;
     border-bottom: 1px solid black;
     text-decoration: none;
@@ -66,12 +73,40 @@ label {
     background-color: black;
 }
 
+/* end of navigation section */
+
+.middle {
+    position: absolute;
+    top: 50%;
+    right: 14%;
+    color: aliceblue;
+    text-align: center;
+    width: 71%;
+}
+
+
+.email {
+    margin-right: 20px;
+
+}
+
+.line {
+    margin-left: 20px;
+
+}
+
 li.contact {
     float: left;
     margin-left: 25px;
     cursor: pointer;
     font-weight: bold;
 }
+
+.home {
+    cursor: pointer;
+    font-weight: bold;
+}
+
 
 .bioLink {
     cursor: pointer;
@@ -103,29 +138,20 @@ li.contact {
 
 
 .homePage {
-    background-image: url("https://images.pexels.com/photos/754082/pexels-photo-754082.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+    background-image: url("https://i.pinimg.com/236x/15/f1/91/15f1916fa60de4e4b7de182798357351.jpg");
+    background-repeat: no-repeat;
     margin-top: 150px;
-    margin-right: 70px;
+    margin-right: 380px;
     margin-left: 50px;
     margin-bottom: 100px;
     padding-top: 290px;
-    padding-right: 50px;
+    padding-right: 139px;
     padding-bottom: 280px;
-    padding-left: 50px;
-}
-
-
-.contactInfo {
-    display: none;
-    background-color: lightblue;
-    margin-top: 90px;
-    margin-right: 130px;
-    margin-left: 130px;
-    padding-top: 90px;
-    padding-right: 100px;
-    padding-bottom: 450px;
     padding-left: 100px;
 }
+
+
+
 
 
 .bioPage {
