--- a/main.css
+++ b/main.css
@@ -1,8 +1,7 @@
-html,
 body {
     background-image: url("https://wallpapertag.com/wallpaper/full/9/f/6/705304-top-pictures-of-black-backgrounds-1920x1200.jpg");
 
-    background-size: cover;
+
 
     width: 100%;
     height: 100%;
@@ -172,12 +171,10 @@ li.contact {
 /* projects info */
 .projects {
     display: none;
-    background-image: url("https://wallpaperplay.com/walls/full/0/8/c/257416.jpg");
+    background-image: url("https://wallpaperstream.com/wallpapers/full/cityscape/Cool-Blue-Black-City-View.jpg");
     color: white;
-    margin-top: 90px;
-    margin-right: 19px;
-    margin-left: 19px;
-    padding-top: 430px;
+
+    padding-top: 490px;
     cursor: pointer;
 }
 
@@ -210,3 +207,44 @@ li.contact {
 }
 
 /* ene of projects section */
+
+@media only screen and (max-width: 375px) {
+
+    .projects {
+        background-image: url("https://wallpaperstream.com/wallpapers/full/cityscape/Cool-Blue-Black-City-View.jpg") no-repeat;
+        background-size: 100% 100%, cover;
+
+        background-position: bottom center;
+
+    }
+
+    .Cfc-disc {
+        position: absolute;
+        top: 65%;
+        width: 88%;
+        text-indent: 3%;
+        left: 0%;
+    }
+
+
+    .chelseaFc {
+        position: absolute;
+        top: 45%;
+        left: 31%;
+
+    }
+
+    .chelseaLogo {
+        border-style: none;
+        height: 100px;
+        position: absolute;
+        top: 51%;
+        left: 31%;
+    }
+
+
+
+
+
+
+}
