--- a/main.css
+++ b/main.css
@@ -158,7 +158,7 @@ li.contact {
 
 .bioPage {
     display: none;
-    background-image: url("https://images.pexels.com/photos/1428277/pexels-photo-1428277.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    background-image: url("https://images.pexels.com/photos/761/night-dark-moon-slice.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
     margin-top: 10px;
     width: 100%;
     height: 100%;
@@ -376,7 +376,7 @@ li.contact {
         background-repeat: no-repeat;
         background-position: center;
         padding-top: 200px;
-        padding-bottom: 400px;
+        padding-bottom: 90px;
         font-size: 1.3em;
     }
 
@@ -437,7 +437,7 @@ li.contact {
         background-repeat: no-repeat;
         background-position: center;
         padding-top: 200px;
-        padding-bottom: 400px;
+        padding-bottom: 100px;
         font-size: 1.3em;
     }
 
@@ -631,8 +631,8 @@ li.contact {
 
         background-repeat: no-repeat;
         background-position: center;
-        padding-top: 300px;
-        padding-bottom: 400px;
+        padding-top: 200px;
+        padding-bottom: 170px;
 
 
     }
